content/versions/3.40/guides/mongodb.adoc
////
This guide is maintained in the main Quarkus repository
and pull requests should be submitted there:
https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
////
= Using the MongoDB Client
include::_attributes.adoc[]
:categories: data
:categories-path: data.data-nosql
:summary: This guide covers how to use MongoDB in Quarkus.
:topics: data,mongodb,nosql
:extensions: io.quarkus:quarkus-mongodb-client

MongoDB is a well known NoSQL Database that is widely used.

In this guide, we see how you can get your REST services to use the MongoDB database.

== Prerequisites

include::{includes}/prerequisites.adoc[]
* MongoDB installed or Docker installed

== Architecture

The application built in this guide is quite simple: the user can add elements in a list using a form and the list is updated.

All the information between the browser and the server is formatted as JSON.

The elements are stored in MongoDB.

== Solution

We recommend that you follow the instructions in the next sections and create the application step by step.
However, you can go right to the completed example.

Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].

The solution is located in the `mongodb-quickstart` link:{quickstarts-tree-url}/mongodb-quickstart[directory].

== Creating the Maven project

First, we need a new project. Create a new project with the following command:

:create-app-artifact-id: mongodb-quickstart
:create-app-extensions: rest-jackson,mongodb-client
include::{includes}/devtools/create-app.adoc[]

This command generates a Maven structure importing the Quarkus REST (formerly RESTEasy Reactive) Jackson and MongoDB Client extensions.
After this, the `quarkus-mongodb-client` extension has been added to your build file.

If you already have your Quarkus project configured, you can add the `mongodb-client` extension
to your project by running the following command in your project base directory:

:add-extension-extensions: mongodb-client
include::{includes}/devtools/extension-add.adoc[]

This will add the following to your `pom.xml`:

[source,xml,role="primary asciidoc-tabs-target-sync-cli asciidoc-tabs-target-sync-maven"]
.pom.xml
----
<dependency>
    <groupId>io.quarkus</groupId>
    <artifactId>quarkus-mongodb-client</artifactId>
</dependency>
----

[source,gradle,role="secondary asciidoc-tabs-target-sync-gradle"]
.build.gradle
----
implementation("io.quarkus:quarkus-mongodb-client")
----

== Creating your first JSON REST service

In this example, we will create an application to manage a list of fruits.

First, let's create the `Fruit` bean as follows:

[source,java]
----
package org.acme.mongodb;

import java.util.Objects;

public class Fruit {

    private String name;
    private String description;
    private String id;

    public Fruit() {
    }

    public Fruit(String name, String description) {
        this.name = name;
        this.description = description;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getDescription() {
        return description;
    }

    public void setDescription(String description) {
        this.description = description;
    }

    @Override
    public boolean equals(Object obj) {
        if (!(obj instanceof Fruit)) {
            return false;
        }

        Fruit other = (Fruit) obj;

        return Objects.equals(other.name, this.name);
    }

    @Override
    public int hashCode() {
        return Objects.hash(this.name);
    }

    public void setId(String id) {
        this.id = id;
    }

    public String getId() {
        return id;
    }
}
----

Nothing fancy. One important thing to note is that having a default constructor is required by the JSON serialization layer.

Now create a `org.acme.mongodb.FruitService` that will be the business layer of our application and store/load the fruits from the mongoDB database.

[source,java]
----
package org.acme.mongodb;

import com.mongodb.client.MongoClient;
import com.mongodb.client.MongoCollection;
import com.mongodb.client.MongoCursor;
import org.bson.Document;

import jakarta.enterprise.context.ApplicationScoped;
import jakarta.inject.Inject;
import java.util.ArrayList;
import java.util.List;

@ApplicationScoped
public class FruitService {

    @Inject MongoClient mongoClient;

    public List<Fruit> list(){
        List<Fruit> list = new ArrayList<>();
        MongoCursor<Document> cursor = getCollection().find().iterator();

        try {
            while (cursor.hasNext()) {
                Document document = cursor.next();
                Fruit fruit = new Fruit();
                fruit.setName(document.getString("name"));
                fruit.setDescription(document.getString("description"));
                list.add(fruit);
            }
        } finally {
            cursor.close();
        }
        return list;
    }

    public void add(Fruit fruit){
        Document document = new Document()
                .append("name", fruit.getName())
                .append("description", fruit.getDescription());
        getCollection().insertOne(document);
    }

    private MongoCollection getCollection(){
        return mongoClient.getDatabase("fruit").getCollection("fruit");
    }
}
----

Now, create the `org.acme.mongodb.FruitResource` class as follows:

[source,java]
----
@Path("/fruits")
public class FruitResource {

    @Inject FruitService fruitService;

    @GET
    public List<Fruit> list() {
        return fruitService.list();
    }

    @POST
    public List<Fruit> add(Fruit fruit) {
        fruitService.add(fruit);
        return list();
    }
}
----

The implementation is pretty straightforward, and you just need to define your endpoints using the Jakarta REST annotations and use the `FruitService` to list/add new fruits.

== Configuring the MongoDB database
The main property to configure is the URL to access the MongoDB instance. Almost all configuration can be included in the connection URI, so we advise you to do so. You can find more information in the MongoDB documentation: https://docs.mongodb.com/manual/reference/connection-string/

A sample configuration should look like this:

[source,properties]
----
# configure the mongoDB client for a replica set of two nodes
quarkus.mongodb.connection-string = mongodb://mongo1:27017,mongo2:27017
----

In this example, we are using a single instance running on localhost:

[source,properties]
----
# configure the mongoDB client for a single instance on localhost
quarkus.mongodb.connection-string = mongodb://localhost:27017
----

=== Resolving mongo+srv:// URLs

When using `mongo+srv://` URLs, the MongoDB driver resolves DNS SRV records to retrieve the list of hosts to connect to.
By default, it relies on a DNS client implemented using JNDI.

For security reasons, Quarkus restricts JNDI usage within applications to help mitigate potential vulnerabilities like Log4Shell.
To support `mongo+srv://`, Quarkus provides an alternative DNS client.

However, in some environments, this alternative DNS client may be unable to resolve `SRV` records.
If you encounter such issues, you can revert to the MongoDB driver’s default DNS client by setting the following properties:

[source, properties]
----
quarkus.naming.enable-jndi=true
quarkus.class-loading.removed-resources."io.quarkus\:quarkus-mongodb-client"=META-INF/services/com.mongodb.spi.dns.DnsClientProvider
----

This restores the default JNDI-based resolution mechanism used by the MongoDB driver.

[[dev-services]]
=== Use the MongoDB Dev Services

See xref:mongodb-dev-services.adoc[MongoDB Dev Services].

== Multiple MongoDB Clients

MongoDB allows you to configure multiple clients.
Using several clients works the same way as having a single client.

[source,properties]
----
quarkus.mongodb.connection-string = mongodb://login:pass@mongo1:27017/database

quarkus.mongodb.users.connection-string = mongodb://mongo2:27017/userdb
quarkus.mongodb.inventory.connection-string = mongodb://mongo3:27017/invdb,mongo4:27017/invdb
----

Notice there's an extra bit in the key (the `users` and `inventory` segments).
The syntax is as follows: `quarkus.mongodb.[optional name.][mongo connection property]`.
If the name is omitted, it configures the default client.

[NOTE]
====
The use of multiple MongoDB clients enables multi-tenancy for MongoDB by allowing to connect to multiple MongoDB clusters. +
If you want to connect to multiple databases inside the same cluster,
multiple clients are **not** necessary as a single client is able to access all databases in the same cluster
(as a JDBC connection is able to access to multiple schemas inside the same database).
====

=== Named Mongo client Injection

When using multiple clients, each `MongoClient`, you can select the client to inject using the `io.quarkus.mongodb.MongoClientName` qualifier.
Using the above properties to configure three different clients, you can also inject each one as follows:

[source,java,indent=0]
----
@Inject
MongoClient defaultMongoClient;

@Inject
@MongoClientName("users")
MongoClient mongoClient1;

@Inject
@MongoClientName("inventory")
ReactiveMongoClient mongoClient2;
----

=== Activate or deactivate Mongo Clients

When a Mongo Client is configured at build time, and its URL is set at runtime, it is active by default. Quarkus
starts the corresponding Mongo Client when the application starts.

To deactivate a Mongo Client at runtime, either:

* Do not set `quarkus.mongodb[.optional name].hosts` or `quarkus.mongodb[.optional name].connection-#string#`.
* Set `quarkus.mongodb[.optional name].active` to `false`.

If a Mongo Client is not active:

* The Mongo Client does not attempt to connect to Mongo during application startup.
* The Mongo Client does not contribute a <<mongo-health-check,health check>>.
* Static CDI injection points involving the Mongo Client, such as `@Inject ReactiveMongoClient mongoClient` or `@Inject MongoClient mongoClient`, cause application startup to fail.
* Dynamic retrieval of the Mongo Client, such as through `CDI.getBeanContainer()`, `Arc.instance()`, or an injected `Instance<ReactiveMongoClient>`, causes an exception to be thrown.
* Other Quarkus extensions that consume the Mongo Client may cause application startup to fail.

This feature is especially useful when the application must dynamically select a Mongo Client from a predefined set at
runtime.

.An example of configuring multiple Mongo Clients for runtime selection:

[source,properties]
----
quarkus.mongodb.one.active=false
quarkus.mongodb.one.connection-string=mongodb://127.0.0.1:27018
quarkus.mongodb.two.active=false
quarkus.mongodb.two.connection-string=mongodb://127.0.0.1:27019
----

[source,java]
----
import io.quarkus.arc.InjectableInstance;

import com.mongodb.client.MongoClient;
import io.quarkus.mongodb.reactive.ReactiveMongoClient;

@ApplicationScoped
public class MyConsumer {
    @Inject
    @MongoClientName("one")
    InjectableInstance<ReactiveMongoClient> one;
    @Inject
    @MongoClientName("two")
    InjectableInstance<MongoClient> two;
    public void doSomething() {
        ReactiveMongoClient mongoClient = one.getActive();
        // ...
    }
}
----

Setting `quarkus.mongodb.one.active=true` xref:config-reference.adoc#configuration-sources[at runtime] makes only the
Mongo Client `one` available.
Setting `quarkus.mongodb.two.active=true` at runtime makes only the Mongo Client `two` available.

[IMPORTANT]
====
A Mongo Client (either default or named) must always be discoverable at build-time to be considered for runtime
injection. This can be done by injecting the Mongo Client name with `@MongoClientName`. If the Mongo Client name may be
active or inactive, it needs to use the wrapper `InjectableInstance<>`, or else Quarkus will throw an exception at
startup time if the Mongo Client is inactive. Alternatively, Mongo Clients may also be discovered via configuration.
====

== Running a MongoDB Database
As by default, `MongoClient` is configured to access a local MongoDB database on port 27017 (the default MongoDB port), if you have a local running database on this port, there is nothing more to do before being able to test it!

If you want to use Docker to run a MongoDB database, you can use the following command to launch one:
[source,bash,subs=attributes+]
----
docker run -ti --rm -p 27017:27017 {mongo-image}
----

[NOTE]
====
If you use <<dev-services,Dev Services>>, launching the container manually is not necessary.
====


== Creating a frontend

Now let's add a simple web page to interact with our `FruitResource`.
Quarkus automatically serves static resources located under the `META-INF/resources` directory.
In the `src/main/resources/META-INF/resources` directory, add a `fruits.html` file with the content from this link:{quickstarts-blob-url}/mongodb-quickstart/src/main/resources/META-INF/resources/fruits.html[fruits.html] file in it.

You can now interact with your REST service:

:devtools-wrapped:

 * start Quarkus with:
+
include::{includes}/devtools/dev.adoc[]
 * open a browser to `http://localhost:8080/fruits.html`
 * add new fruits to the list via the form

:!devtools-wrapped:

[[reactive]]
== Reactive MongoDB Client
A reactive MongoDB Client is included in Quarkus.
Using it is as easy as using the classic MongoDB Client.
You can rewrite the previous example to use it like the following.

[TIP]
.Mutiny
====
The MongoDB reactive client uses Mutiny reactive types.
If you are not familiar with Mutiny, check xref:mutiny-primer.adoc[Mutiny - an intuitive reactive programming library].
====

[source,java]
----
package org.acme.mongodb;

import io.quarkus.mongodb.reactive.ReactiveMongoClient;
import io.quarkus.mongodb.reactive.ReactiveMongoCollection;
import io.smallrye.mutiny.Uni;
import org.bson.Document;

import jakarta.enterprise.context.ApplicationScoped;
import jakarta.inject.Inject;
import java.util.List;

@ApplicationScoped
public class ReactiveFruitService {

    @Inject
    ReactiveMongoClient mongoClient;

    public Uni<List<Fruit>> list() {
        return getCollection().find()
                .map(doc -> {
                    Fruit fruit = new Fruit();
                    fruit.setName(doc.getString("name"));
                    fruit.setDescription(doc.getString("description"));
                    return fruit;
                }).collect().asList();
    }

    public Uni<Void> add(Fruit fruit) {
        Document document = new Document()
                .append("name", fruit.getName())
                .append("description", fruit.getDescription());
        return getCollection().insertOne(document)
                .onItem().ignore().andContinueWithNull();
    }

    private ReactiveMongoCollection<Document> getCollection() {
        return mongoClient.getDatabase("fruit").getCollection("fruit");
    }
}
----


[source,java]
----
package org.acme.mongodb;

import io.smallrye.mutiny.Uni;

import java.util.List;

import jakarta.inject.Inject;
import jakarta.ws.rs.Path;
import jakarta.ws.rs.Produces;
import jakarta.ws.rs.Consumes;
import jakarta.ws.rs.GET;
import jakarta.ws.rs.POST;
import jakarta.ws.rs.core.MediaType;

@Path("/reactive_fruits")
@Produces(MediaType.APPLICATION_JSON)
@Consumes(MediaType.APPLICATION_JSON)
public class ReactiveFruitResource {

    @Inject
    ReactiveFruitService fruitService;

    @GET
    public Uni<List<Fruit>> list() {
        return fruitService.list();
    }

    @POST
    public Uni<List<Fruit>> add(Fruit fruit) {
        return fruitService.add(fruit)
                .onItem().ignore().andSwitchTo(this::list);
    }
}
----

== Simplifying MongoDB Client usage using BSON codec

By using a Bson `Codec`, the MongoDB Client will take care of the transformation of your domain object to/from a MongoDB `Document` automatically.

First you need to create a Bson `Codec` that will tell Bson how to transform your entity to/from a MongoDB `Document`.
Here we use a `CollectibleCodec` as our object is retrievable from the database (it has a MongoDB identifier), if not we would have used a `Codec` instead.
More information in the codec documentation: https://www.mongodb.com/docs/drivers/java/sync/current/fundamentals/data-formats/codecs/.

[source,java]
----
package org.acme.mongodb.codec;

import com.mongodb.MongoClientSettings;
import org.acme.mongodb.Fruit;
import org.bson.Document;
import org.bson.BsonWriter;
import org.bson.BsonValue;
import org.bson.BsonReader;
import org.bson.BsonString;
import org.bson.codecs.Codec;
import org.bson.codecs.CollectibleCodec;
import org.bson.codecs.DecoderContext;
import org.bson.codecs.EncoderContext;

import java.util.UUID;

public class FruitCodec implements CollectibleCodec<Fruit> {

    private final Codec<Document> documentCodec;

    public FruitCodec() {
        this.documentCodec = MongoClientSettings.getDefaultCodecRegistry().get(Document.class);
    }

    @Override
    public void encode(BsonWriter writer, Fruit fruit, EncoderContext encoderContext) {
        Document doc = new Document();
        doc.put("name", fruit.getName());
        doc.put("description", fruit.getDescription());
        documentCodec.encode(writer, doc, encoderContext);
    }

    @Override
    public Class<Fruit> getEncoderClass() {
        return Fruit.class;
    }

    @Override
    public Fruit generateIdIfAbsentFromDocument(Fruit document) {
        if (!documentHasId(document)) {
            document.setId(UUID.randomUUID().toString());
        }
        return document;
    }

    @Override
    public boolean documentHasId(Fruit document) {
        return document.getId() != null;
    }

    @Override
    public BsonValue getDocumentId(Fruit document) {
        return new BsonString(document.getId());
    }

    @Override
    public Fruit decode(BsonReader reader, DecoderContext decoderContext) {
        Document document = documentCodec.decode(reader, decoderContext);
        Fruit fruit = new Fruit();
        if (document.getString("id") != null) {
            fruit.setId(document.getString("id"));
        }
        fruit.setName(document.getString("name"));
        fruit.setDescription(document.getString("description"));
        return fruit;
    }
}
----


Then you need to create a `CodecProvider` to link this `Codec` to the `Fruit` class.

[source,java]
----
package org.acme.mongodb.codec;

import org.acme.mongodb.Fruit;
import org.bson.codecs.Codec;
import org.bson.codecs.configuration.CodecProvider;
import org.bson.codecs.configuration.CodecRegistry;

public class FruitCodecProvider implements CodecProvider {
    @Override
    public <T> Codec<T> get(Class<T> clazz, CodecRegistry registry) {
        if (clazz.equals(Fruit.class)) {
            return (Codec<T>) new FruitCodec();
        }
        return null;
    }

}
----

Quarkus takes care of registering the `CodecProvider` for you as a CDI bean of `@Singleton` scope.

Finally, when getting the `MongoCollection` from the database you can use directly the `Fruit` class instead of the `Document` one, the codec will automatically map the `Document` to/from your `Fruit` class.

Here is an example of using a `MongoCollection` with the `FruitCodec`.

[source,java]
----
package org.acme.mongodb;

import com.mongodb.client.MongoClient;
import com.mongodb.client.MongoCollection;
import com.mongodb.client.MongoCursor;

import jakarta.enterprise.context.ApplicationScoped;
import jakarta.inject.Inject;
import java.util.ArrayList;
import java.util.List;

@ApplicationScoped
public class CodecFruitService {

    @Inject MongoClient mongoClient;

    public List<Fruit> list(){
        List<Fruit> list = new ArrayList<>();
        MongoCursor<Fruit> cursor = getCollection().find().iterator();

        try {
            while (cursor.hasNext()) {
                list.add(cursor.next());
            }
        } finally {
            cursor.close();
        }
        return list;
    }

    public void add(Fruit fruit){
        getCollection().insertOne(fruit);
    }

    private MongoCollection<Fruit> getCollection(){
        return mongoClient.getDatabase("fruit").getCollection("fruit", Fruit.class);
    }
}
----

== The POJO Codec

The link:https://www.mongodb.com/docs/drivers/java/sync/current/fundamentals/data-formats/document-data-format-pojo/[POJO Codec] provides a set of annotations that enable the customization of
the way a POJO is mapped to a MongoDB collection and this codec is initialized automatically by Quarkus.
This codec also supports Java records so you can use them for your POJOs or an attribute of your POJOs.

One of these annotations is the `@BsonDiscriminator` annotation that allows storing multiple Java types in a single MongoDB collection by adding
a discriminator field inside the document. It can be useful when working with abstract types or interfaces.

Quarkus will automatically register all the classes annotated with `@BsonDiscriminator` with the POJO codec.

The POJO Codec have enhanced generic support via `PropertyCodecProvider`,
Quarkus will automatically register any `PropertyCodecProvider` with the POJO Codec (these classes are automatically made CDI beans of `@Singleton` scope).
When building native executables and using generic types, you might need to register the type arguments for reflection.

== Simplifying MongoDB with Panache

The xref:mongodb-panache.adoc[MongoDB with Panache] extension facilitates the usage of MongoDB by providing active record style entities (and repositories) like you have in xref:hibernate-orm-panache.adoc[Hibernate ORM with Panache] and focuses on making your entities trivial and fun to write in Quarkus.

== Schema migration with Liquibase

The xref:liquibase-mongodb.adoc[Liquibase MongoDB] extension facilitates the initialization of a MongoDB database including indices and initial data.
It implements the same schema migration facilities that Liquibase offers for SQL databases.

[[mongo-health-check]]
== Connection Health Check

If you are using the `quarkus-smallrye-health` extension, `quarkus-mongodb-client` will automatically add a readiness health check
to validate the connection to the cluster.

So when you access the `/q/health/ready` endpoint of your application you will have information about the connection validation status.

This behavior can be disabled by setting the `quarkus.mongodb.health.enabled` property to `false` in your `application.properties`.

== Metrics

If you are using the `quarkus-micrometer`, `quarkus-mongodb-client` can provide metrics about the connection pools.
This behavior must first be enabled by setting the `quarkus.mongodb.metrics.enabled` property to `true` in your
`application.properties`.

So when you access the `/q/metrics` endpoint of your application you will have information about the connection pool
status.

== Tracing

To use tracing with MongoDB, you need to add the xref:opentelemetry.adoc[`quarkus-opentelemetry`] extension to your project.

Even with all the tracing infrastructure in place the mongodb tracing is not enabled by default, and you need to enable it by setting this property:
[source, properties]
----
# enable tracing
quarkus.mongodb.tracing.enabled=true
----

=== Command Detail Level

By default, MongoDB command details are not included in traces (`OFF` mode). You can control this behavior with the `command-detail-level` property.
When enabled, the command text is stored in the `db.query.text` attribute following OpenTelemetry semantic conventions.

[source, properties]
----
# Command detail level: OFF (default), SANITIZED, or FULL
quarkus.mongodb.tracing.command-detail-level=SANITIZED
----

**Detail levels:**

* `OFF` (default) - No command details, only operation metadata (operation name, database, collection)
* `SANITIZED` - Command structure with type placeholders instead of actual values
** Example: `{"find": "<string>", "filter": {"email": "<string>", "age": "<int32>"}}`
** Preserves command structure for debugging while protecting sensitive data
* `FULL` - Complete command including all data
** **NOT recommended for production** - may expose sensitive information

[WARNING]
====
Using `FULL` mode can expose sensitive data (passwords, emails, personal information) in your traces. Only use in development or when you're certain no sensitive data is involved.
====

== Testing helpers

xref:#dev-services[Dev Services for MongoDB] is your best option to start a MongoDB database for your unit tests.

But if you can't use it, you can start a MongoDB database using one of the two `QuarkusTestResourceLifecycleManager` that Quarkus provides.
They rely on link:https://github.com/flapdoodle-oss/de.flapdoodle.embed.mongo[Flapdoodle embedded MongoDB].

- `io.quarkus.test.mongodb.MongoTestResource` will start a single instance on port 27017.
- `io.quarkus.test.mongodb.MongoReplicaSetTestResource` will start a replicaset with two instances, one on port 27017 and the other on port 27018.

To use them, you need to add the `io.quarkus:quarkus-test-mongodb` dependency to your pom.xml.

For more information about the usage of a `QuarkusTestResourceLifecycleManager` please read xref:getting-started-testing.adoc#quarkus-test-resource[Quarkus test resource].

[TIP]
====
To set the desired port MongoDB will listen to when it is launched, the following code should be used:

[source,java]
----
@QuarkusTestResource(value = MongoTestResource.class, initArgs = @ResourceArg(name = MongoTestResource.PORT, value = "27017"))
----

To set the desired MongoDB version that will be launched, the following code should be used:

[source,java]
----
@QuarkusTestResource(value = MongoTestResource.class, initArgs = @ResourceArg(name = MongoTestResource.VERSION, value = "V5_0"))
----

The string value used can be any of one of the `de.flapdoodle.embed.mongo.distribution.Version` or `de.flapdoodle.embed.mongo.distribution.Version.Main` enums.
If no version is specified, `Version.Main.V4_0` is used by default.
====

== The legacy client

We don't include the legacy MongoDB client by default. It contains the now retired MongoDB Java API (DB, DBCollection,... )
and the `com.mongodb.MongoClient` that is now superseded by `com.mongodb.client.MongoClient`.

If you want to use the legacy API, you need to add the following dependency to your build file:

[source,xml,role="primary asciidoc-tabs-target-sync-cli asciidoc-tabs-target-sync-maven"]
.pom.xml
----
<dependency>
    <groupId>org.mongodb</groupId>
    <artifactId>mongodb-driver-legacy</artifactId>
</dependency>
----

[source,gradle,role="secondary asciidoc-tabs-target-sync-gradle"]
.build.gradle
----
implementation("org.mongodb:mongodb-driver-legacy")
----

== TLS configuration

If you want to use SSL/TLS encryption, you need to add this property in your `application.properties`:

[source,properties]
----
quarkus.mongodb.tls=true
----

You can also configure the client to use a tls configuration from the TLS registry, this will enable tls:

[source,properties]
----
quarkus.tls.mongo.trust-store.pem.certs=certa.pem,certb.pem
quarkus.mongodb.tls-configuration-name=mongo
----

You can configure the client to trust servers with certificates with invalid hostnames:

[source,properties]
----
quarkus.tls.mongo.hostname-verification-algorithm=NONE
quarkus.mongodb.tls-configuration-name=mongo
----


== Building a native executable

You can use the MongoDB client in a native executable.


You can build a native executable with the usual command:

include::{includes}/devtools/build-native.adoc[]

Running it is as simple as executing `./target/mongodb-quickstart-1.0.0-SNAPSHOT-runner`.

You can then point your browser to `http://localhost:8080/fruits.html` and use your application.

[WARNING]
====
Currently, Quarkus doesn't support link:https://docs.mongodb.com/manual/core/security-client-side-encryption/[Client-Side Field Level Encryption] in native mode.
====

[TIP]
====
If you encounter the following error when running your application in native mode: +
`Failed to encode 'MyObject'. Encoding 'myVariable' errored with: Can't find a codec for class org.acme.MyVariable.` +
This means that the `org.acme.MyVariable` class is not known to GraalVM, the remedy is to add the `@RegisterForReflection` annotation to your `MyVariable` class.
More details about the `@RegisterForReflection` annotation can be found on the xref:writing-native-applications-tips.adoc#registerForReflection[native application tips] page.
====

== Customize the Mongo client configuration programmatically

If you need to customize the Mongo client configuration programmatically, you need to implement the `io.quarkus.mongodb.runtime.MongoClientCustomizer` interface and expose it as a CDI _application scoped_ bean:

[source, java]
----
@ApplicationScoped
public class MyCustomizer implements MongoClientCustomizer {

    @Override
    public MongoClientSettings.Builder customize(MongoClientSettings.Builder builder) {
        return builder.applicationName("my-app");
    }
}
----

The bean can customize a specific client using the `@MongoClientName` qualifier to indicate the client name.
When there is no qualifier, it customizes the default client.
At most one customizer can be used per client.
If multiple customizers targeting the same client are detected, an exception is thrown at build time.

This feature can be used to configure client-side field level encryption (CSFLE).
Follows the instructions from https://www.mongodb.com/docs/manual/core/csfle/[the Mongo web site] to configure CSFLE:

[source, java]
----
@ApplicationScoped
public class MyCustomizer implements MongoClientCustomizer {
    @Override
    public MongoClientSettings.Builder customize(MongoClientSettings.Builder builder) {
        Map<String, Map<String, Object>> kmsProviders = getKmsProviders();
        String dek = getDataEncryptionKey();
        Map<String, BsonDocument> schema = getSchema(dek);

        Map<String, Object> extraOptions = new HashMap<>();
        extraOptions.put("cryptSharedLibPath", "<path to crypt shared library>");

        return builder.autoEncryptionSettings(AutoEncryptionSettings.builder()
                .keyVaultNamespace(KEY_VAULT_NAMESPACE)
                .kmsProviders(kmsProviders)
                .schemaMap(schemaMap)
                .extraOptions(extraOptions)
                .build());
    }
}
----

IMPORTANT: Client-side field level encryption, and feature relying on https://github.com/mongodb/libmongocrypt[Mongo Crypt] in general, are not supported in native mode.


== Configuration Reference

include::{generated-dir}/config/quarkus-mongodb-client.adoc[opts=optional, leveloffset=+1]
